<resources>
    <string name="app_name">Museo</string>
    <!-- Strings pantalla de logueo -->
    <string name="usu">Usuario</string>
    <string name="help">* Usuario requerido</string>
    <string name="con">Contraseña</string>
    <string name="help2">* Contraseña requerida</string>
    <string name="ing">Ingresar</string>
    <string name="info">¿No tienes usuario? Haz click aqui y crealo</string>
    <string name="info2">¿Olvidaste tu contraseña? Haz click aqui</string>
    <string name="remember">¿Recordar Usuario?</string>
    <string name="ru">¿Recordar Usuario?</string>
    <string name="notfound">Usuario o Contraseña incorrectos</string>

    <!-- Strings pantalla de formulario -->
    <string name="form">FORMULARIO</string>
    <string name="nya">Usuario</string>
    <string name="email">E-mail</string>
    <string name="usuarioinfo">* Ingresar nombre de usuario</string>
    <string name="emailinfo">* Ingresar E-mail</string>
    <string name="contrainfo">* Ingresar contraseña</string>
    <string name="crearusu">Crear Usuario</string>
    <string name="existe">Nombre de usuario ocupado, porfavor elija otro</string>
    <string name="miss">Campo/s faltante/s</string>
    <string name="e1">El nombre de usuario debe contener por lo menos 6 caracteres</string>
    <string name="e2">El mail ingresado no es valido</string>
    <string name="e3">La contraseña debe contener por lo menos 8 caracteres</string>
    <string name="bn">Usuario creado exitosamente</string>
    <!-- Strings menu -->
    <string name="inicio">Inicio</string>
    <string name="fav">Favoritos</string>
    <string name="send">Enviar E-mail</string>
    <string name="set">Configuracion de usuario</string>
    <string name="mus">Museo</string>
    <string name="logout">Cerrar Sesión</string>

    <!-- Necesario para el Navigation Drawer -->
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Mandar mail -->
    <string name="mailmus">museum@gmail.com</string>
    <string name="sub">Apreciación</string>
    <string name="intro">Me gustaria realizar la siguiente apreciación:</string>
    <string name="actua">Actualizar</string>

    <string name="helpfor">*Ingrese su usuario</string>
    <string name="helpforc">*Ingrese su nueva contraseña</string>
    <string name="ayuda">No hay problema, solo ingrese su Usuario y nueva contraseña</string>
    <string name="change">Cambiar contraseña</string>
    <string name="conn">Nueva contraseña</string>

    <string name="scan">Escanea QR</string>
    <string name="listac">Lista completa</string>


    <string name="tuc">Tu contraseña</string>
    <string name="tue">Tu E-mail</string>
    <string name="tuu">Tu Usuario</string>
    <string name="iusu">Informacion del usuario</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="informacion">Esta aplicacion esta realizada con el proposito de gestionar
        diferentes aspectos del Museo, ingresando al siguiente menu encontrado arriba a la derecha podras
    navegar a traves de toda la aplicacion. Si encuentras un QR debreas acceder a la pestaña de inicio
    y seleccionar la opcion "Escanear" </string>
    <string name="informacion2">Si tienes alguna apreciacion, no dudes en mandar un mail, desde ya muchas
    gracias por utilizar la aplicacion</string>
    <string name="favorite">Agregar a Favoritos</string>
    <string name="eliminar">Eliminar de Favoritos</string>

    <!-- Strings modificar datos usuarios -->
    <string name="nm">Aun no se permite cambiar el nombre de Usuario</string>
    <string name="cg">Cambios guardados con exito</string>
    <string name="nmm">El mail no puede cambiarse por el momento</string>
    <string name="nmv">El mail no puede cambiarse por el momento</string>
    <string name="nc">La contraseña no puede ser nulo</string>
    <string name="ncc">La contraseña debe contener por lo menos 8 caracteres</string>

    <!-- Strings de un Item -->
    <string name="deletefav">Favorito eliminado</string>
    <string name="savefavs">Favorito guardado</string>

</resources>